# hud-remote-browser

./: .env.example  .gitignore  Dockerfile  Dockerfile.hud  README.md  build-and-push-env.sh  env.py  local_test.py  pyproject.toml  remote_tasks.json  remote_test.py  tasks.py  test_task.json
environment/: __init__.py  context.py  server.py
evaluate/: __init__.py  cookie_exists.py  cookie_match.py  element_exists.py  history_length.py  page_contains.py  raw_last_action_is.py  selector_history.py  sheet_contains.py  sheets_cell_values.py  url_match.py  verify_type_action.py
providers/: README.md  __init__.py  anchorbrowser.py  browserbase.py  hyperbrowser.py  steel.py
scenarios/: __init__.py  general.py  sheets.py
server/: main.py
server/evaluate/: cookie_exists.py  cookie_match.py  element_exists.py  history_length.py  page_contains.py  raw_last_action_is.py  selector_history.py  sheet_contains.py  sheets_cell_values.py  url_match.py  verify_type_action.py
server/setup/: cookies.py  interact.py  load_html.py  navigate.py  sheets.py
setup/: __init__.py  cookies.py  interact.py  load_html.py  navigate.py  sheets.py
src/hud_controller/: server.py
tests/: conftest.py  test_evaluation.py  test_unit.py
tools/: __init__.py  browser.py  computer.py
