[project]
name = "hud-remote-browser"
version = "0.1.0"
description = "HUD Remote Browser Controller with MCP tools for cloud browser providers"
requires-python = ">=3.11,<3.13"
dependencies = [
    "hud-python @ git+https://github.com/hud-evals/hud-python.git",
    "playwright",
    "httpx>=0.24.0",
    "google-api-python-client",
    "google-auth",
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[tool.hud]
image = "hud-remote-browser:dev"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [ "environment", "server",]
