[project]
name = "hud-remote-browser"
version = "0.1.0"
description = "HUD Remote Browser Controller with MCP tools for cloud browser providers"
requires-python = ">=3.11,<3.13"
dependencies = [
 "hud-python>=0.5.38",
 "pyautogui",
 "playwright",
 "httpx",
 "typer",
 "google-api-python-client",
 "google-auth",
 "Pillow",
 "pytest>=9.0.2",
 "pytest-asyncio>=1.3.0",
 "python-dotenv>=1.2.2",
]
# Note: Pillow is required for screenshot rescaling in computer tools

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
hud-remote-browser = "hud_controller.__main__:main"

[tool.hud]
image = "hud-remote-browser:dev"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [ "src/hud_controller",]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
